// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`intl-phone-input renders without problems 1`] = `
<Input
  className="intl-phone-input intl-phone-input_theme_alfa-on-white"
  focused={false}
  formNoValidate={false}
  leftAddons={
    <Select
      className="intl-phone-input__select"
      directions={
        Array [
          "bottom-left",
          "bottom-right",
          "top-left",
          "top-right",
        ]
      }
      disabled={false}
      equalPopupWidth={false}
      groupView="default"
      mobileMenuMode="native"
      mode="radio"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      options={Array []}
      placeholder="Выберите:"
      popupSecondaryOffset={-24}
      renderButtonContent={[Function]}
      renderPopupOnFocus={false}
      size="m"
      value={
        Array [
          "ru",
        ]
      }
      width="default"
    />
  }
  noValidate={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  size="m"
  type="tel"
  value="+7"
/>
`;

exports[`intl-phone-input renders without problems in all sizes: size = l 1`] = `
<Input
  className="intl-phone-input intl-phone-input_theme_alfa-on-white"
  focused={false}
  formNoValidate={false}
  leftAddons={
    <Select
      className="intl-phone-input__select"
      directions={
        Array [
          "bottom-left",
          "bottom-right",
          "top-left",
          "top-right",
        ]
      }
      disabled={false}
      equalPopupWidth={false}
      groupView="default"
      mobileMenuMode="native"
      mode="radio"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      options={Array []}
      placeholder="Выберите:"
      popupSecondaryOffset={-27}
      renderButtonContent={[Function]}
      renderPopupOnFocus={false}
      size="l"
      value={
        Array [
          "ru",
        ]
      }
      width="default"
    />
  }
  noValidate={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  size="l"
  type="tel"
  value="+7"
/>
`;

exports[`intl-phone-input renders without problems in all sizes: size = m 1`] = `
<Input
  className="intl-phone-input intl-phone-input_theme_alfa-on-white"
  focused={false}
  formNoValidate={false}
  leftAddons={
    <Select
      className="intl-phone-input__select"
      directions={
        Array [
          "bottom-left",
          "bottom-right",
          "top-left",
          "top-right",
        ]
      }
      disabled={false}
      equalPopupWidth={false}
      groupView="default"
      mobileMenuMode="native"
      mode="radio"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      options={Array []}
      placeholder="Выберите:"
      popupSecondaryOffset={-24}
      renderButtonContent={[Function]}
      renderPopupOnFocus={false}
      size="m"
      value={
        Array [
          "ru",
        ]
      }
      width="default"
    />
  }
  noValidate={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  size="m"
  type="tel"
  value="+7"
/>
`;

exports[`intl-phone-input renders without problems in all sizes: size = s 1`] = `
<Input
  className="intl-phone-input intl-phone-input_theme_alfa-on-white"
  focused={false}
  formNoValidate={false}
  leftAddons={
    <Select
      className="intl-phone-input__select"
      directions={
        Array [
          "bottom-left",
          "bottom-right",
          "top-left",
          "top-right",
        ]
      }
      disabled={false}
      equalPopupWidth={false}
      groupView="default"
      mobileMenuMode="native"
      mode="radio"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      options={Array []}
      placeholder="Выберите:"
      popupSecondaryOffset={-18}
      renderButtonContent={[Function]}
      renderPopupOnFocus={false}
      size="s"
      value={
        Array [
          "ru",
        ]
      }
      width="default"
    />
  }
  noValidate={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  size="s"
  type="tel"
  value="+7"
/>
`;

exports[`intl-phone-input renders without problems in all sizes: size = xl 1`] = `
<Input
  className="intl-phone-input intl-phone-input_theme_alfa-on-white"
  focused={false}
  formNoValidate={false}
  leftAddons={
    <Select
      className="intl-phone-input__select"
      directions={
        Array [
          "bottom-left",
          "bottom-right",
          "top-left",
          "top-right",
        ]
      }
      disabled={false}
      equalPopupWidth={false}
      groupView="default"
      mobileMenuMode="native"
      mode="radio"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      options={Array []}
      placeholder="Выберите:"
      popupSecondaryOffset={-28}
      renderButtonContent={[Function]}
      renderPopupOnFocus={false}
      size="xl"
      value={
        Array [
          "ru",
        ]
      }
      width="default"
    />
  }
  noValidate={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  size="xl"
  type="tel"
  value="+7"
/>
`;
